<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/download_removebg_preview"/>

    <item
        android:id="@+id/nav_map"
        android:title="@string/nav_map"
        android:icon="@android:drawable/ic_dialog_map"/>

    <item
        android:id="@+id/nav_machines"
        android:title="@string/machines"
        android:icon="@drawable/tractor_13248"/>


    <item
        android:id="@+id/nav_tasks"
        android:title="@string/tasks"
        android:icon="@android:drawable/ic_menu_today"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/_79_4794565_android_gear_icon_png_transparent_png_removebg_preview"/>

</menu>